Change text alignment to justify

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -17,6 +17,10 @@ img {
   border-bottom: 0.125rem solid hsl(0, 0%, 30%);
 }
 
+.body {
+  text-align: justify;
+}
+
 .archive-year {
   margin-top: 2rem;
   margin-bottom: 1rem;
