--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,8 @@ layout: default
 
 <div class="post">
   <h1>{{ page.title }}</h1>
-  <span class="fs-4 text-muted">{{ page.date | date: "%b %d, %y" }}</span>
+  <p class="fs-4 text-muted">
+    {{ page.subtitle }} <span class="float-end">{{ page.date | date: "%b %d, %y" }}</span>
+  </p>
   <div class="mt-4">{{ content }}</div>
 </div>
